--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!doctype html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/og-image.jpg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TikTok Comment Generator</title>
+
+    <title>TikTok Comment Generator | Free, Verified Badge & AI</title>
+    <meta name="description" content="Create realistic TikTok comment screenshots instantly. Features: Blue Verified Badge, Dark Mode, AI Text Generation, and High-Quality Export without watermarks." />
+    <meta name="keywords" content="tiktok comment generator, fake tiktok comment, tiktok screenshot maker, verified badge tiktok, tiktok meme maker, no watermark" />
+    <meta name="author" content="TikTok Tools" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tt-comments.online/" />
+    <meta property="og:title" content="TikTok Comment Generator | Create Viral Screenshots" />
+    <meta property="og:description" content="Generate fake TikTok comments with Verified Badge (Blue Tick). No watermark. Try it for free!" />
+    <meta property="og:image" content="https://tt-comments.online/og-image.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://tt-comments.online/" />
+    <meta name="twitter:title" content="TikTok Comment Generator | Verified Badge" />
+    <meta name="twitter:description" content="Create realistic TikTok comment screenshots instantly. No watermark." />
+    <meta name="twitter:image" content="https://tt-comments.online/og-image.png" />
+
   </head>
   <body>
     <div id="root"></div>
